feat: implement waste processing, dynamic discounting, and delivery scheduling